add header structure, dummy content, and styling

--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,15 @@
 	</head>
 	<body>
 		<div id="content"></div>
-		<header id="header">text</header>
+		<header id="header">
+			<div id="headerLeft">logo</div>
+			<div id="headerCenter">search</div>
+			<div id="headerRight">
+				<div id="addTask">+</div>
+				<div id="login">login</div>
+				<div id="settings">gear</div>
+			</div>
+		</header>
 		<main></main>
 	</body>
 </html>
