add main content structure, styling

--- a/src/template.html
+++ b/src/template.html
@@ -17,6 +17,9 @@
 				<div id="settings">gear</div>
 			</div>
 		</header>
-		<main></main>
+		<main id="main">
+			<aside id="main-aside"></aside>
+			<section id="main-content"></section>
+		</main>
 	</body>
 </html>
