--- a/src/template.html
+++ b/src/template.html
@@ -18,8 +18,15 @@
 			</div>
 		</header>
 		<main id="main">
-			<aside id="main-aside"></aside>
-			<section id="main-content"></section>
+			<aside id="main-aside">
+				<div class="aside-item">INBOX</div>
+				<div class="aside-item">PROJECTS</div>
+				<div class="aside-item">OTHER</div>
+			</aside>
+			<section id="main-section">
+				<div id="main-header">HEADER</div>
+				<div id="main-content">START OF NEXT DIV</div>
+			</section>
 		</main>
 	</body>
 </html>
