add styling to main header

--- a/src/template.html
+++ b/src/template.html
@@ -24,7 +24,7 @@
 				<div class="aside-item">OTHER</div>
 			</aside>
 			<section id="main-section">
-				<div id="main-header">HEADER</div>
+				<div id="main-header">PAGE TITLE</div>
 				<div id="main-content">START OF NEXT DIV</div>
 			</section>
 		</main>
