add task card html structure

--- a/src/template.html
+++ b/src/template.html
@@ -25,7 +25,14 @@
 			</aside>
 			<section id="main-section">
 				<div id="main-header">PAGE TITLE</div>
-				<div id="main-content">START OF NEXT DIV</div>
+				<div id="main-content">
+					<div class="task-card">
+						<div class="task-title">Title</div>
+						<div class="task-description">description</div>
+						<div class="task-date">due date</div>
+						<div class="task-priority">priority</div>
+					</div>
+				</div>
 			</section>
 		</main>
 	</body>
