add site logo to top left

--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,12 @@
 	<body>
 		<div id="content"></div>
 		<header id="header">
-			<div id="headerLeft">logo</div>
+			<div id="headerLeft">
+				<img
+					src="./assets/checkbox-marked-circle.png"
+					alt="checked circle logo"
+				/>
+			</div>
 			<div id="headerCenter">search</div>
 			<div id="headerRight">
 				<div id="addTask">+</div>
@@ -26,6 +31,12 @@
 			<section id="main-section">
 				<div id="main-header">PAGE TITLE</div>
 				<div id="main-content">
+					<div class="task-card">
+						<div class="task-title">Title</div>
+						<div class="task-description">description</div>
+						<div class="task-date">due date</div>
+						<div class="task-priority">priority</div>
+					</div>
 					<div class="task-card">
 						<div class="task-title">Title</div>
 						<div class="task-description">description</div>
