add settings gear icon and align header right nav items center

--- a/src/template.html
+++ b/src/template.html
@@ -19,7 +19,13 @@
 			<div id="headerRight">
 				<div id="addTask">+</div>
 				<div id="login">login</div>
-				<div id="settings">gear</div>
+				<div id="settings">
+					<img
+						id="gear-icon"
+						src="./assets/cog-outline.png"
+						alt="settings gear outline"
+					/>
+				</div>
 			</div>
 		</header>
 		<main id="main">
