--- a/index.html
+++ b/index.html
@@ -9,12 +9,34 @@
 	<body>
 		<div id="content"></div>
 		<header id="header">
-			<div id="headerLeft">logo</div>
-			<div id="headerCenter">search</div>
+			<div id="headerLeft">
+				<img
+					src="322192cd8c34f95ce4f9.png"
+					alt="checked circle logo"
+				/>
+			</div>
+			<div id="headerCenter">
+				<label for="site-search">Search the site:</label>
+				<input type="search" id="site-search" name="q" />
+
+				<button>Search</button>
+			</div>
 			<div id="headerRight">
-				<div id="addTask">+</div>
-				<div id="login">login</div>
-				<div id="settings">gear</div>
+				<div id="addTask">
+					<img
+						id="add-icon"
+						src="c9eeb95b294190d5f132.png"
+						alt="add button plus sign"
+					/>
+				</div>
+				<div id="login">LOGIN</div>
+				<div id="settings">
+					<img
+						id="gear-icon"
+						src="88a1f32dfcb581fd3df6.png"
+						alt="settings gear outline"
+					/>
+				</div>
 			</div>
 		</header>
 		<main id="main">
@@ -24,8 +46,21 @@
 				<div class="aside-item">OTHER</div>
 			</aside>
 			<section id="main-section">
-				<div id="main-header">HEADER</div>
-				<div id="main-content">START OF NEXT DIV</div>
+				<div id="main-header">PAGE TITLE</div>
+				<div id="main-content">
+					<div class="task-card" id="task-1">
+						<div class="task-title">Title</div>
+						<div class="task-description">description</div>
+						<div class="task-date">due date</div>
+						<div class="task-priority">priority</div>
+					</div>
+					<div class="task-card" id="task-2">
+						<div class="task-title">Title</div>
+						<div class="task-description">description</div>
+						<div class="task-date">due date</div>
+						<div class="task-priority">priority</div>
+					</div>
+				</div>
 			</section>
 		</main>
 	</body>
