add github link to gear - temporary for development

--- a/src/template.html
+++ b/src/template.html
@@ -31,11 +31,13 @@
 				</div>
 				<div id="login">LOGIN</div>
 				<div id="settings">
-					<img
-						id="gear-icon"
-						src="./assets/cog-outline.png"
-						alt="settings gear outline"
-					/>
+					<a href="https://github.com/alexgeis/todo-list" target="_blank">
+						<img
+							id="gear-icon"
+							src="./assets/cog-outline.png"
+							alt="settings gear outline"
+						/>
+					</a>
 				</div>
 			</div>
 		</header>
