--- a/src/template.html
+++ b/src/template.html
@@ -55,12 +55,14 @@
 						<div class="task-description">description</div>
 						<div class="task-date">due date</div>
 						<div class="task-priority">priority</div>
+						<div class="task-notes">notes</div>
 					</div>
 					<div class="task-card" id="task-2">
 						<div class="task-title">Title</div>
 						<div class="task-description">description</div>
 						<div class="task-date">due date</div>
 						<div class="task-priority">priority</div>
+						<div class="task-notes">notes</div>
 					</div>
 				</div>
 			</section>
