add delete trashcan icon to task cards

--- a/src/template.html
+++ b/src/template.html
@@ -56,6 +56,11 @@
 						<div class="task-date">due date</div>
 						<div class="task-priority">priority</div>
 						<div class="task-notes">notes</div>
+						<img
+							src="./assets/trash-can-outline.png"
+							alt="trash can delete icon"
+							class="task-delete"
+						/>
 					</div>
 					<div class="task-card" id="task-2">
 						<div class="task-title">Title</div>
@@ -63,6 +68,11 @@
 						<div class="task-date">due date</div>
 						<div class="task-priority">priority</div>
 						<div class="task-notes">notes</div>
+						<img
+							src="./assets/trash-can-outline.png"
+							alt="trash can delete icon"
+							class="task-delete"
+						/>
 					</div>
 				</div>
 			</section>
