--- a/src/template.html
+++ b/src/template.html
@@ -77,5 +77,84 @@
 				</div>
 			</section>
 		</main>
+		<!-- ADD TASK FORM -->
+		<section class="add_task_section">
+			<div class="new-task-form">
+				<h2 class="form_title">Add new task</h2>
+				<span class="material-icons close-form" id="close-form"> close </span>
+				<label for="t-title"
+					>task title*
+					<input
+						class="form-control"
+						type="text"
+						name="task-title"
+						id="t-title"
+						placeholder="Title"
+					/><small class="err-msg">* Task title is required</small></label
+				>
+				<label for="t-desc"
+					>Task description*
+					<input
+						class="form-control"
+						type="textarea"
+						name="t-desc"
+						id="t-desc"
+						placeholder="Description"
+					/><small class="err-msg">* Task description is required</small></label
+				>
+				<label for="t-date"
+					>Publishing date*
+					<!-- <input
+						type="number"
+						min="0"
+						max="2023"
+						step="1"
+						value="1917"
+						name="book-publishing-date"
+						id="t-date"
+					/> -->
+
+					<input class="form-control" type="date" name="t-date" id="t-date" />
+					<div class="err-msg">* Due date is required</div></label
+				>
+				<label for="t-priority"
+					>Priority (1-5 -> 5 is highest)*
+					<input
+						class="form-control"
+						type="number"
+						name="t-priority"
+						id="t-priority"
+						placeholder="1-5"
+						min="1"
+						max="5"
+					/><small class="err-msg">* Priority is required</small></label
+				>
+				<label for="b-language"
+					>Language*
+					<input
+						class="form-control"
+						type="text"
+						name="book-language"
+						id="b-language"
+						placeholder="Language"
+					/><small class="err-msg">* Book language is required</small></label
+				>
+				<label for="b-read_status"
+					>book status*
+					<select class="form-control" name="book-status" id="b-read_status">
+						<option value="null" disabled="" selected="">
+							did you read this book?
+						</option>
+						<option value="true">i already read it</option>
+						<option value="false">still have to read it</option></select
+					><small class="err-msg">* Book reading status is required</small>
+				</label>
+
+				<div class="new-book-buttons">
+					<button class="btn add-book">add</button>
+					<button class="btn clear">Clear fields</button>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
