--- a/src/template.html
+++ b/src/template.html
@@ -129,29 +129,19 @@
 						max="5"
 					/><small class="err-msg">* Priority is required</small></label
 				>
-				<label for="b-language"
-					>Language*
+				<label for="t-notes"
+					>Notes*
 					<input
 						class="form-control"
-						type="text"
-						name="book-language"
-						id="b-language"
-						placeholder="Language"
-					/><small class="err-msg">* Book language is required</small></label
+						type="textarea"
+						name="t-notes"
+						id="t-notes"
+						placeholder="Notes"
+					/><small class="err-msg">* Notes are required</small></label
 				>
-				<label for="b-read_status"
-					>book status*
-					<select class="form-control" name="book-status" id="b-read_status">
-						<option value="null" disabled="" selected="">
-							did you read this book?
-						</option>
-						<option value="true">i already read it</option>
-						<option value="false">still have to read it</option></select
-					><small class="err-msg">* Book reading status is required</small>
-				</label>
 
-				<div class="new-book-buttons">
-					<button class="btn add-book">add</button>
+				<div class="new-task-buttons">
+					<button class="btn add-task">add</button>
 					<button class="btn clear">Clear fields</button>
 				</div>
 			</div>
