add basic styling to add new task form elements and cleaned up placeholder/default values

--- a/src/template.html
+++ b/src/template.html
@@ -83,7 +83,7 @@
 				<h2 class="form_title">Add new task</h2>
 				<span class="material-icons close-form" id="close-form"> close </span>
 				<label for="t-title"
-					>task title*
+					>Task title*
 					<input
 						class="form-control"
 						type="text"
@@ -115,7 +115,7 @@
 					/> -->
 
 					<input class="form-control" type="date" name="t-date" id="t-date" />
-					<div class="err-msg">* Due date is required</div></label
+					<small class="err-msg">* Due date is required</small></label
 				>
 				<label for="t-priority"
 					>Priority (1-5 -> 5 is highest)*
@@ -124,7 +124,7 @@
 						type="number"
 						name="t-priority"
 						id="t-priority"
-						placeholder="1-5"
+						placeholder="3"
 						min="1"
 						max="5"
 					/><small class="err-msg">* Priority is required</small></label
