add clear add new task form fields function

--- a/src/template.html
+++ b/src/template.html
@@ -83,7 +83,7 @@
 				<h2 class="form_title">Add new task</h2>
 				<span class="material-icons close-form" id="close-form"> close </span>
 				<label for="t-title"
-					>Task title*
+					>Task Title*
 					<input
 						class="form-control"
 						type="text"
@@ -93,7 +93,7 @@
 					/><small class="err-msg">* Task title is required</small></label
 				>
 				<label for="t-desc"
-					>Task description*
+					>Task Description*
 					<input
 						class="form-control"
 						type="textarea"
@@ -103,7 +103,7 @@
 					/><small class="err-msg">* Task description is required</small></label
 				>
 				<label for="t-date"
-					>Publishing date*
+					>Task Due Date*
 					<!-- <input
 						type="number"
 						min="0"
