add select element for adding a new task to an existing project in the add new task form

--- a/src/template.html
+++ b/src/template.html
@@ -140,6 +140,21 @@
 					/><small class="err-msg">* Notes are required</small></label
 				>
 
+				<label for="project-task-add"
+					>Add to Existing Project
+					<select
+						class="form-control"
+						name="project-task-add"
+						id="project-task-add"
+					>
+						<option value="null" disabled="" selected="">
+							Select an existing project
+						</option>
+						<option value="true">Fake Project 1</option>
+						<option value="false">Fake Project 1</option>
+					</select>
+				</label>
+
 				<div class="new-task-buttons">
 					<button class="btn add-task">add</button>
 					<button class="btn clear">Clear fields</button>
