add test data for task cards

--- a/src/template.html
+++ b/src/template.html
@@ -50,7 +50,7 @@
 			<section id="main-section">
 				<div id="main-header">SECTION TITLE</div>
 				<div id="main-content">
-					<div class="task-card" id="task-1">
+					<!-- <div class="task-card" id="task-1">
 						<div class="task-title">Title</div>
 						<div class="task-description">description</div>
 						<div class="task-date">due date</div>
@@ -73,7 +73,7 @@
 							alt="trash can delete icon"
 							class="task-delete"
 						/>
-					</div>
+					</div> -->
 				</div>
 			</section>
 		</main>
