add task form and project form icons

--- a/src/template.html
+++ b/src/template.html
@@ -26,8 +26,20 @@
 					<img
 						id="add-icon"
 						src="./assets/plus-circle-outline.png"
-						alt="add button plus sign"
+						alt="add button plus icon"
 					/>
+					<div id="add-icon-menu">
+						<img
+							id="add-task-form"
+							src="./assets/checkbox-marked-circle-plus-outline.png"
+							alt="add task plus icon"
+						/>
+						<img
+							id="add-project-form"
+							src="./assets/list-group-plus.png"
+							alt="add project plus icon"
+						/>
+					</div>
 				</div>
 				<div id="login">LOGIN</div>
 				<div id="settings">
@@ -43,7 +55,7 @@
 		</header>
 		<main id="main">
 			<aside id="main-aside">
-				<div class="aside-item aside-selected">INBOX</div>
+				<div class="aside-item aside-selected">DASHBOARD</div>
 				<div class="aside-item">PROJECTS</div>
 				<div class="aside-item">OTHER</div>
 			</aside>
