adjusting styling for add task and add project forms

--- a/src/template.html
+++ b/src/template.html
@@ -91,7 +91,7 @@
 		</main>
 		<!-- ADD TASK FORM -->
 		<section class="add_task_section">
-			<div class="new-task-form">
+			<div class="form-container" id="new-project-form">
 				<h2 class="form_title">Add new task</h2>
 				<span class="material-icons close-form" id="close-task-form"> close </span>
 				<label for="t-title"
@@ -175,7 +175,7 @@
 		</section>
 		<!-- ADD PROJECT FORM -->
 		<section class="add_project_section">
-			<div class="new-project-form">
+			<div class="form-container" id="new-project-form">
 				<h2 class="form_title">Add new project</h2>
 				<span class="material-icons close-form" id="close-project-form"> close </span>
 				<label for="p-title"
