add arrow to selected aside item

--- a/src/template.html
+++ b/src/template.html
@@ -55,12 +55,21 @@
 		</header>
 		<main id="main">
 			<aside id="main-aside">
-				<div class="aside-item aside-selected">DASHBOARD</div>
-				<div class="aside-item">PROJECTS</div>
-				<div class="aside-item">OTHER</div>
+				<div class="aside-item aside-selected" id="dash-aside">DASHBOARD</div>
+				<div class="aside-item">
+					<button id="project-accordion">PROJECTS</button>
+					<div id="project-panel-display">
+						<ul id="project-panel-list">
+							<li>project 1</li>
+							<li>project 2</li>
+							<li>project 3</li>
+						</ul>
+					</div>
+				</div>
+				<!-- <div class="aside-item">OTHER</div> -->
 			</aside>
 			<section id="main-section">
-				<div id="main-header">SECTION TITLE</div>
+				<div id="main-header">DASHBOARD</div>
 				<div id="main-content">
 					<!-- <div class="task-card" id="task-1">
 						<div class="task-title">Title</div>
