fix header alignment issue

--- a/src/template.html
+++ b/src/template.html
@@ -69,7 +69,7 @@
 				<!-- <div class="aside-item">OTHER</div> -->
 			</aside>
 			<section id="main-section">
-				<div id="main-header">DASHBOARD</div>
+				<div id="main-header">ALL TASKS</div>
 				<div id="main-content">
 					<!-- <div class="task-card" id="task-1">
 						<div class="task-title">Title</div>
