add site header and styling

--- a/src/template.html
+++ b/src/template.html
@@ -14,6 +14,7 @@
 					src="./assets/checkbox-marked-circle.png"
 					alt="checked circle logo"
 				/>
+				<div id="header-site-title">TODO APP</div>
 			</div>
 			<div id="headerCenter">
 				<label for="site-search">Search the site:</label>
