--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 					src="322192cd8c34f95ce4f9.png"
 					alt="checked circle logo"
 				/>
+				<div id="header-site-title">TODO APP</div>
 			</div>
 			<div id="headerCenter">
 				<label for="site-search">Search the site:</label>
 				<input type="search" id="site-search" name="q" />
-
 				<button>Search</button>
 			</div>
 			<div id="headerRight">
@@ -26,42 +26,169 @@
 					<img
 						id="add-icon"
 						src="c9eeb95b294190d5f132.png"
-						alt="add button plus sign"
+						alt="add button plus icon"
 					/>
+					<div id="add-icon-menu">
+						<img
+							id="add-task-form"
+							src="a7dbbe33721f7f5394b7.png"
+							alt="add task plus icon"
+						/>
+						<img
+							id="add-project-form"
+							src="b5f1ce7a307116d1a7a3.png"
+							alt="add project plus icon"
+						/>
+					</div>
 				</div>
 				<div id="login">LOGIN</div>
 				<div id="settings">
-					<img
-						id="gear-icon"
-						src="88a1f32dfcb581fd3df6.png"
-						alt="settings gear outline"
-					/>
+					<a href="https://github.com/alexgeis/todo-list" target="_blank">
+						<img
+							id="gear-icon"
+							src="88a1f32dfcb581fd3df6.png"
+							alt="settings gear outline"
+						/>
+					</a>
 				</div>
 			</div>
 		</header>
 		<main id="main">
 			<aside id="main-aside">
-				<div class="aside-item">INBOX</div>
-				<div class="aside-item">PROJECTS</div>
-				<div class="aside-item">OTHER</div>
+				<div class="aside-item aside-selected" id="dash-aside">DASHBOARD</div>
+				<div class="aside-item">
+					<button id="project-accordion">PROJECTS</button>
+					<div id="project-panel-display">
+						<ul id="project-panel-list">
+							<!-- <li>project 1</li> -->
+						</ul>
+					</div>
+				</div>
+				<!-- <div class="aside-item">OTHER</div> -->
 			</aside>
 			<section id="main-section">
-				<div id="main-header">PAGE TITLE</div>
+				<div id="main-header"></div>
 				<div id="main-content">
-					<div class="task-card" id="task-1">
-						<div class="task-title">Title</div>
-						<div class="task-description">description</div>
-						<div class="task-date">due date</div>
-						<div class="task-priority">priority</div>
-					</div>
-					<div class="task-card" id="task-2">
-						<div class="task-title">Title</div>
-						<div class="task-description">description</div>
-						<div class="task-date">due date</div>
-						<div class="task-priority">priority</div>
-					</div>
 				</div>
 			</section>
 		</main>
+		<!-- ADD TASK FORM -->
+		<section class="add_task_section">
+			<div class="form-container" id="new-project-form">
+				<h2 class="form_title">Add new task</h2>
+				<span class="material-icons close-form" id="close-task-form"> close </span>
+				<label for="t-title"
+					>Task Title*
+					<input
+						class="form-control"
+						type="text"
+						name="task-title"
+						id="t-title"
+						placeholder="Title"
+					/><small class="err-msg">* Task title is required</small></label
+				>
+				<label for="t-desc"
+					>Task Description*
+					<input
+						class="form-control"
+						type="textarea"
+						name="t-desc"
+						id="t-desc"
+						placeholder="Description"
+					/><small class="err-msg">* Task description is required</small></label
+				>
+				<label for="t-date"
+					>Task Due Date*
+					<!-- <input
+						type="number"
+						min="0"
+						max="2023"
+						step="1"
+						value="1917"
+						name="book-publishing-date"
+						id="t-date"
+					/> -->
+
+					<input class="form-control" type="date" name="t-date" id="t-date" />
+					<small class="err-msg">* Due date is required</small></label
+				>
+				<label for="t-priority"
+					>Priority (1-5 -> 5 is highest)*
+					<input
+						class="form-control"
+						type="number"
+						name="t-priority"
+						id="t-priority"
+						placeholder="3"
+						min="1"
+						max="5"
+					/><small class="err-msg">* Priority is required</small></label
+				>
+				<label for="t-notes"
+					>Notes*
+					<input
+						class="form-control"
+						type="textarea"
+						name="t-notes"
+						id="t-notes"
+						placeholder="Notes"
+					/><small class="err-msg">* Notes are required</small></label
+				>
+
+				<label for="project-task-add"
+					>Add to Existing Project
+					<select
+						class="form-control"
+						name="project-task-add"
+						id="project-task-add"
+					>
+						<option value="null" disabled="" selected="">
+							Select an existing project
+						</option>
+						<option value="true">Fake Project 1</option>
+						<option value="false">Fake Project 1</option>
+					</select>
+				</label>
+
+				<div class="new-task-buttons">
+					<button class="btn" id="add-task-btn">add</button>
+					<button class="btn" id="task-clear">Clear fields</button>
+				</div>
+			</div>
+		</section>
+		<!-- ADD PROJECT FORM -->
+		<section class="add_project_section">
+			<div class="form-container" id="new-project-form">
+				<h2 class="form_title">Add new project</h2>
+				<span class="material-icons close-form" id="close-project-form"> close </span>
+				<label for="p-title"
+					>Project Title*
+					<input
+						class="form-control"
+						type="text"
+						name="p-title"
+						id="p-title"
+						placeholder="Title"
+					/><small class="err-msg">* Project title is required</small></label
+				>
+				<label for="p-desc"
+					>Project Description*
+					<input
+						class="form-control"
+						type="textarea"
+						name="p-desc"
+						id="p-desc"
+						placeholder="Description"
+					/><small class="err-msg"
+						>* Project description is required</small
+					></label
+				>
+
+				<div class="new-project-buttons">
+					<button class="btn" id="add-project-btn"">add</button>
+					<button class="btn" id="project-clear">Clear fields</button>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
