add styling for project accordion dropdown panel

--- a/src/template.html
+++ b/src/template.html
@@ -55,6 +55,7 @@
 			</div>
 		</header>
 		<main id="main">
+			<!-- ASIDE MENU -->
 			<aside id="main-aside">
 				<div class="aside-item aside-selected" id="dash-aside">DASHBOARD</div>
 				<div class="aside-item" id="all-projects-aside">ALL PROJECTS</div>
@@ -68,6 +69,7 @@
 				</div>
 				<!-- <div class="aside-item">OTHER</div> -->
 			</aside>
+			<!-- MAIN SECTION -->
 			<section id="main-section">
 				<div id="main-header"></div>
 				<div id="main-content">
