--- a/src/template.html
+++ b/src/template.html
@@ -59,15 +59,13 @@
 			<aside id="main-aside">
 				<div class="aside-item aside-selected" id="dash-aside">DASHBOARD</div>
 				<div class="aside-item" id="all-projects-aside">ALL PROJECTS</div>
-				<div class="aside-item">
+				<div class="aside-item" id="project-list-aside">
 					<button id="project-accordion-btn">PROJECTS</button>
 					<div id="project-panel-display">
 						<ul id="project-panel-list">
-							<!-- <li>project 1</li> -->
 						</ul>
 					</div>
 				</div>
-				<!-- <div class="aside-item">OTHER</div> -->
 			</aside>
 			<!-- MAIN SECTION -->
 			<section id="main-section">
