--- a/src/template.html
+++ b/src/template.html
@@ -78,29 +78,30 @@
 		<section class="add_task_section">
 			<div class="form-container" id="new-project-form">
 				<h2 class="form_title">Add new task</h2>
-				<span class="material-icons close-form" id="close-task-form"> close </span>
+				<p class="form_subtitle">* required</p>
+				<span class="material-icons close-form" id="close-task-form"> X </span>
 				<label for="t-title"
-					>Task Title*
+					>Title*
 					<input
 						class="form-control"
 						type="text"
 						name="task-title"
 						id="t-title"
 						placeholder="Title"
-					/><small class="err-msg">* Task title is required</small></label
+					/><small class="err-msg"> * Task title is required</small></label
 				>
 				<label for="t-desc"
-					>Task Description*
+					>Description
 					<input
 						class="form-control"
 						type="textarea"
 						name="t-desc"
 						id="t-desc"
 						placeholder="Description"
-					/><small class="err-msg">* Task description is required</small></label
+					/></label
 				>
 				<label for="t-date"
-					>Task Due Date*
+					>Due Date
 					<!-- <input
 						type="number"
 						min="0"
@@ -112,7 +113,7 @@
 					/> -->
 
 					<input class="form-control" type="date" name="t-date" id="t-date" />
-					<small class="err-msg">* Due date is required</small></label
+					</label
 				>
 				<label for="t-priority"
 					>Priority (1-5 -> 5 is highest)*
@@ -124,17 +125,17 @@
 						placeholder="3"
 						min="1"
 						max="5"
-					/><small class="err-msg">* Priority is required</small></label
+					/><small class="err-msg"> * Priority is required</small></label
 				>
 				<label for="t-notes"
-					>Notes*
+					>Notes
 					<input
 						class="form-control"
 						type="textarea"
 						name="t-notes"
 						id="t-notes"
 						placeholder="Notes"
-					/><small class="err-msg">* Notes are required</small></label
+					/></label
 				>
 
 				<label for="project-task-add"
@@ -153,7 +154,7 @@
 				</label>
 
 				<div class="new-task-buttons">
-					<button class="btn" id="add-task-btn">add</button>
+					<button class="btn" id="add-task-btn">Add</button>
 					<button class="btn" id="task-clear">Clear fields</button>
 				</div>
 			</div>
@@ -162,9 +163,10 @@
 		<section class="add_project_section">
 			<div class="form-container" id="new-project-form">
 				<h2 class="form_title">Add new project</h2>
-				<span class="material-icons close-form" id="close-project-form"> close </span>
+				<p class="form_subtitle">* required</p>
+				<span class="material-icons close-form" id="close-project-form"> X </span>
 				<label for="p-title"
-					>Project Title*
+					>Title*
 					<input
 						class="form-control"
 						type="text"
@@ -174,7 +176,7 @@
 					/><small class="err-msg">* Project title is required</small></label
 				>
 				<label for="p-desc"
-					>Project Description*
+					>Description*
 					<input
 						class="form-control"
 						type="textarea"
@@ -187,7 +189,7 @@
 				>
 
 				<div class="new-project-buttons">
-					<button class="btn" id="add-project-btn"">add</button>
+					<button class="btn" id="add-project-btn"">Add</button>
 					<button class="btn" id="project-clear">Clear fields</button>
 				</div>
 			</div>
