add clearing of local storage before seeding of data via nav button

--- a/src/template.html
+++ b/src/template.html
@@ -151,6 +151,7 @@
 						<option value="true">Fake Project 1</option>
 						<option value="false">Fake Project 1</option>
 					</select>
+					<small class="err-msg" id="task-project-err-msg"> * Project association is required</small>
 				</label>
 
 				<div class="new-task-buttons">
