first attempt at creating dom injection for entire header - resolving issue of appending not occurring

--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="content"></div>
-		<header id="header">
+		<!-- <header id="header">
 			<div id="headerLeft">
 				<img
 					src="./assets/checkbox-marked-circle.png"
@@ -23,7 +23,7 @@
 				<button>Search</button>
 			</div>
 			<div id="headerRight">
-				<div id="addTask">
+				<div id="addBtn">
 					<img
 						id="add-icon"
 						src="./assets/plus-circle-outline.png"
@@ -53,7 +53,8 @@
 					</a>
 				</div>
 			</div>
-		</header>
+		</header> -->
+		<!-- MAIN -->
 		<main id="main">
 			<!-- ASIDE MENU -->
 			<aside id="main-aside">
