--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div id="content"></div>
-		<!-- <header id="header">
+		<header id="header">
 			<div id="headerLeft">
 				<img
 					src="./assets/checkbox-marked-circle.png"
@@ -53,7 +53,7 @@
 					</a>
 				</div>
 			</div>
-		</header> -->
+		</header>
 		<!-- MAIN -->
 		<main id="main">
 			<!-- ASIDE MENU -->
